# django-flags

./: .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  .travis.yml  404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  INSTALL.md  MANIFEST.in  README.md  index.html  mkdocs.yml  pyproject.toml  search.html  setup.py  sitemap.xml  test.txt  tox.ini
.github/: main.workflow
.github/workflows/: docs.yml  lint.yml  release.yml  test.yml
api/conditions/: index.html
api/decorators/: index.html
api/django/: index.html
api/jinja2/: index.html
api/sources/: index.html
api/state/: index.html
api/urls/: index.html
api/views/: index.html
conditions/: index.html
css/: overrides.css
debugging/: index.html
docs/: conditions.md  debugging.md  index.md  management_commands.md  releasenotes.md  settings.md  testing.md  usage.md
docs/api/: conditions.md  decorators.md  django.md  jinja2.md  sources.md  state.md  urls.md  views.md
docs/css/: overrides.css
flags/: __init__.py  admin.py  apps.py  checks.py  conditions.py  decorators.py  forms.py  jinja2tags.py  middleware.py  models.py  panels.py  settings.py  sources.py  state.py  template_functions.py  urls.py  utils.py  views.py  wagtail_hooks.py
flags/conditions/: __init__.py  conditions.py  registry.py  validators.py
flags/management/commands/: disable_flag.py  enable_flag.py
flags/migrations/: 0001_initial.py  0002_auto_20151030_1401.py  0007_unique_flag_site.py  0008_add_state_conditions.py  0009_migrate_to_conditional_state.py  0010_delete_flag_site_fk.py  0011_migrate_path_data_startswith_to_matches.py  0012_replace_migrations_for_wagtail_independence.py  0013_add_required_field.py  0014_flagmetadata.py  0014_flagstate_unique_constraint.py
flags/templates/flagadmin/: index.html
flags/templates/flagadmin/flags/: create.html  delete.html
flags/templates/flags/panels/: flag_checks.html  flags.html
flags/templatetags/: feature_flags.py  flags_debug.py
flags/tests/: settings.py  test_admin.py  test_checks.py  test_conditions.py  test_conditions_conditions.py  test_conditions_registry.py  test_conditions_validators.py  test_decorators.py  test_forms.py  test_jinja2tags.py  test_management_commands_disable_flag.py  test_management_commands_enable_flag.py  test_middleware.py  test_models.py  test_panels.py  test_settings.py  test_sources.py  test_state.py  test_template_functions.py  test_templatetags_feature_flags.py  test_templatetags_flags_debug.py  test_urls.py  test_views.py  urls.py
flags/tests/testapp/: __init__.py  apps.py  models.py
flags/tests/testapp/migrations/: 0001_initial.py
management_commands/: index.html
releasenotes/: index.html
search/: search_index.json
settings/: index.html
testing/: index.html
usage/: index.html
